Fix: long tags cutoff in Editor

--- a/client/components/token-field/style.scss
+++ b/client/components/token-field/style.scss
@@ -51,13 +51,11 @@ input[type="text"].token-field__input {
 // Tokens
 .token-field__token {
 	font-size: 14px;
-	display: inline-block;
+	display: flex;
 	margin: 2px 0 2px 8px;
 	padding: 0;
 	color: $white;
 	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
 }
 
 .token-field__token-text, .token-field__remove-token {
@@ -69,6 +67,9 @@ input[type="text"].token-field__input {
 .token-field__token-text {
 	border-radius: 4px 0 0 4px;
 	padding: 0 4px 0 6px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .token-field__remove-token {
